<resources>
    <string name="app_name">Mis pacientes</string>
    <string name="todo">TODO</string>
    <string name="administrar_pacientes">Administrar pacientes</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="cedula">Cédula</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="sexo">Sexo</string>
    <string name="anamnesis">Anámnesis</string>
    <string name="celular">Celular</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="notas">Notas</string>
    <string name="mujer_hombre">Mujer / hombre</string>
    <string name="mujer">Mujer</string>
    <string name="hombre">Hombre</string>
    <string name="salvar">Salvar</string>
    <string name="descartar">Descartar</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="desea_borrar_registro">¿Desea borrar este registro?</string>
    <string name="seleccionar_agregar_cita">Aquí puede agregar una cita nueva haciendo clic en el botón flotante con la cruz. Si antes había creado una cita la puede editar haciendo clic en el lápiz o borrar haciendo clic en la X. En las citas puede tomar notas de sus consultas.</string>
    <string name="no_hay_citas_asignadas">No tiene citas en esta fecha</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="honorarios">Honorarios</string>
    <string name="desea_descartar">¿Desea descartar este registro?</string>
    <string name="otras_citas_asignadas">Otras citas asignadas ese día:</string>
    <string name="proximas_citas">Próximas citas:</string>
    <string name="intrucciones_administrar_pacientes">Puede agregar un paciente nuevo haciendo clic en el ícono agregar, o bien modificar e incluso eliminar alguno que esté registrado en los botones correspondientes. Haga clic sobre el nombre para administrar las citas. Si elimina un paciente se eliminan también sus citas y todos los datos asociados.</string>
    <string name="editar_cita">Editar cita</string>
    <string name="citas_de_paciente">Citas del paciente</string>
    <string name="lista_de_pacientes">Lista de pacientes</string>
    <string name="ok">OK</string>
    <string name="indicaciones_crear_usuario">Para poder sincronizar los datos y hacer un respaldo necesitamos nos proporcione un correo electrónico válido y una contraseña. Esta información será confidencial y se pide a efectos de poder identificar la información de sus pacientes en el servidor. Asegúrese estar conectado a internet.</string>
    <string name="contrasena">Contraseña</string>
    <string name="confirmacion_contrasena">Confirmación de la contraseña</string>
    <string name="error_de_autenticacion">Hubo un error de autenticación</string>
    <string name="mensaje_de_bienvenida">Registro correcto, bienvenido</string>
    <string name="ajustes">Ajustes</string>
    <string name="crear_usuario">Crear usuario</string>
    <string name="identificar_usuario">Identificar usuario (log in)</string>
    <string name="respaldar_datos">Respaldar datos</string>
    <string name="recuperar_datos">Recuperar datos</string>
    <string name="usuario_creado">Usuario creado con éxito.</string>
    <string name="error_creando_usuario">Error al intentar crear usuario</string>
    <string name="error_validando_usuario">Error al intentar validar usuario. Asegure una conexión a internet. Error:</string>
    <string name="contrasenas_no_coinciden">Las contraseñas no coinciden. Por favor revise la contraseña y su confirmación.</string>
    <string name="contrasena_invalida">La contraseña debe tener 6 o más caracteres</string>
    <string name="acceso_positivo">Usuario validado con éxito</string>
    <string name="es_necesario_registrarse">Varias funciones de esta aplicación se sincronizan con servidores que requieren un usuario autenticado. Le invitamos a registrarse para continuar.</string>


</resources>